--- a/figures/Figure_1DE/DE_ND75KD_vs_Control.Rmd
+++ b/figures/Figure_1DE/DE_ND75KD_vs_Control.Rmd
@@ -51,6 +51,7 @@ set.seed(42)
 ```{r}
 input_seurat_object <- "./data/Pan_neuro_integrated_FINAL.rds"
 output_figure_prefix <- "./figures/Figure_1DE/Barplot_DE_ND75KD_Control_all_annotations"
+output_file_prefix <- "./figures/Figure_1DE/List_DE_ND75KD_Control_all_annotations"
 ```
 
 ## I. Reading Seurat object
@@ -82,6 +83,11 @@ for(annotation in list.annotations){
 }
 sort(table(all.de.genes$annotation))
 sort(table(all.de.genes$gene))
+```
+
+## Save as table
+```{r}
+fwrite(all.de.genes, file = paste0(output_file_prefix, ".tsv"), quote = F, row.names = F, col.names = T, sep = "\t")
 ```
 
 ## Plot that
@@ -165,3 +171,7 @@ markers <- markers[abs(markers$avg_log2FC) > 1 & markers$p_val_adj <= 0.05,]
 markers
 ```
 
+## Save as table
+```{r}
+fwrite(markers, file = paste0(output_file_prefix, "_overall.tsv"), quote = F, row.names = T, col.names = T, sep = "\t")
+```
